--- a/netlifyone.css
+++ b/netlifyone.css
@@ -10,7 +10,7 @@
 
 .enterbox   {
   display: grid;
-  grid-template-columns: 1fr, 200px;
+  grid-template-columns: 1fr 200px;
   gap: 20px;
 }
 
@@ -26,6 +26,10 @@
 
 h1, h2  {
   color: hsla(0,0%,30%,1.0);
+}
+
+.wrapper  {
+  max-width: 960px;
 }
 
 
